# agent-context

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.pyre/: pyre.stderr
src/agent_context/: __main__.py  models.py
src/agent_context/cli/: app.py  formatters.py
src/agent_context/config/: loader.py  models.py  wizard.py
src/agent_context/plugins/: base.py  github.py  google.py  slack.py
src/agent_context/search/: engine.py  fts.py  semantic.py
src/agent_context/storage/: database.py  schema.sql
src/agent_context/tui/: app.py
src/agent_context/tui/screens/: detail.py  search.py  settings.py
tests/: conftest.py  test_search.py  test_storage.py
tests/fixtures/: gh_output.json  gws_drive_output.json  slackcli_output.json
tests/test_plugins/: test_github.py  test_google.py  test_slack.py
